prevents key white space event

--- a/src/app/wca/pages/dialog/dialog.component.scss
+++ b/src/app/wca/pages/dialog/dialog.component.scss
@@ -40,3 +40,17 @@
       border: 1px solid rgba(0, 0, 0, 0.15);
       outline: none;  
     }
+.prew1{
+  display: block;
+  overflow: auto;
+  user-select: none;
+}
+.prew2{
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  border-radius: 10px 10px 10px 10px;
+  height: 230px;
+  width: 215px;
+  display: inline-block;
+  margin: 25px;
+  padding:22px;
+}
